--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
 html,
 body {
+  font-size: 10px;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f9f9f9;
 }
 
 a {
