--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,15 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 * {
   box-sizing: border-box;
 }
