--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,26 @@
 html,
 body {
+  font-size: 10px;
   padding: 0;
   margin: 0;
+  font-size: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f9f9f9;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
 }
 
 * {
